# prototyping-project

./: README.md
bin_picking_project/: package.xml  setup.cfg  setup.py
bin_picking_project/bin_picking_project/: environment_marker.py  image_publisher.py  inverse_kinematics.py  object_detection.py  object_marker.py
bin_picking_project/bin_picking_project/image_processing/: colorlabeler.py  shapedetector.py
bin_picking_project/config/: params1.yaml  params2.yaml  params3.yaml  params4.yaml
bin_picking_project/environment/: env_box.dae  env_table.dae  target_position.dae  triangle.dae
bin_picking_project/launch/: launch1.py  launch2.py  launch3.py  launch4.py
bin_picking_project/rviz/: config.rviz
bin_picking_project/start_scripts/: build_package.sh  start_set_1.sh  start_set_2.sh  start_set_3.sh  start_set_4.sh
bin_picking_project/urdf_model/: robot_model.urdf
bin_picking_project/urdf_model/meshes/: body1.dae  body4.dae
